export interface Robo {
    nickname : string;
    marca : string;
    numeroSerie : string;
    codigo : string;
    tipoRobo : string;
}