export interface Tarefa {
    tipoTarefa : string;
}