export interface TipoRobo {
    tarefas : string[];
    designacao : string;
    marca : string;
    modelo : string;
}