@startuml ed360

hide circle
hide fields

!theme crt-green
skinparam nodesep 150
hide empty members
left to right direction

package "<<agr Robo>>"{
    class Robo<<root>><<entity>>{}
    class NicknameRobo<<vo>>{}
    class NumeroSerieRobo<<vo>>{}
    class CodigoRobo<<vo>>{}
    class MarcaRobo<<vo>>{}
    'Inibido ou nao
    class EstadoRobo<<enum>>{} 

    Robo --> "1" NicknameRobo
    Robo --> "1" CodigoRobo
    Robo --> "1" NumeroSerieRobo
    Robo --> "1" MarcaRobo
    Robo --> "1" EstadoRobo
}

package "<<agr TipoRobo>>"{
    class TipoRobo<<root>><<entity>>{}
    class MarcaTipoRobo<<vo>>{}
    class ModeloTipoRobo<<vo>>{}
    class DesignacaoTipoRobo<<vo>>{}

    TipoRobo --> "1" DesignacaoTipoRobo
    TipoRobo --> "1" MarcaTipoRobo
    TipoRobo --> "1" ModeloTipoRobo
    Robo --> "1" TipoRobo
}

' Tarefas: Vigilância e transporte de objetos
package "<<agr Tarefa>>"{
    class Tarefa<<root>><<entity>>{}
    class TipoTarefa<<enum>>{}

    TipoRobo --> "*" Tarefa : "executa"
    Tarefa --> "1" TipoTarefa
}
@enduml